Add Discord OAuth integration

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -61,8 +61,8 @@ enable_confirmations = false
 # Use an external OAuth provider. The full list of providers are: `apple`, `azure`, `bitbucket`,
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `keycloak`, `linkedin`, `notion`, `twitch`,
 # `twitter`, `slack`, `spotify`, `workos`, `zoom`.
-[auth.external.apple]
-enabled = false
+[auth.external.discord]
+enabled = true
 client_id = ""
 secret = ""
 # Overrides the default auth redirectUrl.
