--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 	},
 	"dependencies": {
 		"@astrojs/svelte": "^2.0.2",
+		"@astrojs/vercel": "^3.2.0",
 		"@supabase/supabase-js": "^2.8.0",
-		"astro": "^2.0.16",
+		"astro": "^2.1.0",
 		"svelte": "^3.55.1"
 	}
 }
