--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
     "github": {
         "silent": true
-    }
+    },
+    "headers": [
+        {
+            "source": "/favicon.svg",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=604800, stale-while-revalidate=86400"
+                }
+            ]
+        }
+    ]
 }
