--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,15 @@
                     "value": "public, max-age=604800, stale-while-revalidate=86400"
                 }
             ]
+        },
+        {
+            "source": "/_astro/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=604800, stale-while-revalidate=86400"
+                }
+            ]
         }
     ]
 }
